add primefaces dependency

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,14 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.primefaces/primefaces -->
+		<dependency>
+		    <groupId>org.primefaces</groupId>
+		    <artifactId>primefaces</artifactId>
+		    <version>6.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
