Configuracion de Datasource

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost/test
-spring.datasource.username=dbuser
-spring.datasource.password=dbpass
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.jndi-name=java:jboss/datasources/customers
+#spring.datasource.url=jdbc:postgresql://104.131.144.7:5432/
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+#spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.jndi-name=java:/PostgresDS
